# accuweather

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  AGENTS.md  LICENSE  MANIFEST.in  README.md  current.json  example.py  forecast.json  main.py  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup-dev-env.sh  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  pr-labels.yml  pre-commit-update.yml  prek-auto-update.yml  publish.yml  pull_request.yml  push.yml  release-drafter.yml  snyk.yml  stale.yml  test.yml
accuweather/: __init__.py  const.py  exceptions.py  model.py  utils.py
scripts/: setup-local-env.sh
tests/: __init__.py  conftest.py  test_base.py  test_init.py
tests/data/: current_condition_data.json  forecast_data.json
tests/fixtures/: current_condition_data.json  current_conditions.json  daily_forecast_data.json  daily_forecast_imperial.json  forecast_data.json  hourly_forecast_data.json  hourly_forecast_imperial.json  hourly_forecast_metric.json  location.json
tests/snapshots/: test_init.ambr
