[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accuweather"
version = "0.0.0"
license = "Apache-2.0"
description = "Python wrapper for getting weather data from AccuWeather API."
readme = "README.md"
authors = [{name = "Maciej Bieniek"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies    = [
    "aiohttp>=3.9.4",
    "orjson>=3.8.1",
]

[project.optional-dependencies]
test = [
  "aioresponses==0.7.8",
  "coverage==7.12.0",
  "mypy==1.18.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-error-for-skips==2.0.2",
  "pytest-timeout==2.4.0",
  "pytest==9.0.1",
  "ruff==0.14.7",
  "syrupy==5.0.0",
]
dev = [
  "pre-commit==4.5.0",
]

[project.urls]
Homepage = "https://github.com/bieniu/accuweather"

[tool.setuptools.packages.find]
include = ["accuweather*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true

[tool.ruff]
target-version = "py313"

lint.select = ["ALL"]

lint.ignore = [
    "COM812",   # Trailing comma missing
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "EM101",    # Exception must not use a string literal, assign to variable first
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "PLR0913",  # Too many arguments to function call
    "PTH123",   # `open()` should be replaced by `Path.open()`
    "TC002",   # Move third-party import into a type-checking block
    "TRY003",   # Avoid specifying long messages outside the exception class
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "FBT001",   # Boolean-typed positional argument in function definition
    "FBT002",   # Boolean default positional argument in function definition
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004",  # Magic value used in comparison
    "S101",     # Use of `assert` detected
]
"example.py" = [
    "T201",      # `print` found
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.coverage.run]
source = ["accuweather"]

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py312, py313, lint, typing, coverage
skip_missing_interpreters = True

[gh-actions]
python =
  3.12: py312, lint, typing, coverage
  3.13: py313

[testenv]
commands =
  pytest --timeout=30 --cov=accuweather --cov-report=xml {posargs} --error-for-skips
deps =
  .[test]

[testenv:lint]
basepython = python3
depends = py312
ignore_errors = True
skip_install = True
usedevelop = False
commands =
  ruff check .
  ruff format --check .

[testenv:typing]
basepython = python3
depends = py312
ignore_errors = True
skip_install = True
usedevelop = False
commands =
  mypy accuweather

[testenv:coverage]
basepython = python3
depends = py312
skip_install = True
usedevelop = False
commands =
  coverage report --fail-under=79

"""
