[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accuweather"
version = "0.0.0"
license = "Apache-2.0"
description = "Python wrapper for getting weather data from AccuWeather API."
readme = "README.md"
authors = [{name = "Maciej Bieniek"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies    = [
    "aiohttp>=3.9.4",
    "orjson>=3.8.1",
]

[dependency-groups]
dev = [
  "aioresponses==0.7.8",
  "prek==0.3.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-error-for-skips==2.0.2",
  "pytest-timeout==2.4.0",
  "pytest==9.0.2",
  "ruff==0.15.0",
  "syrupy==5.1.0",
  "ty==0.0.16",
]


[project.urls]
Homepage = "https://github.com/bieniu/accuweather"

[tool.setuptools.packages.find]
include = ["accuweather*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
target-version = "py313"

lint.select = ["ALL"]

lint.ignore = [
    "COM812",   # Trailing comma missing
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "EM101",    # Exception must not use a string literal, assign to variable first
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "PLR0913",  # Too many arguments to function call
    "PTH123",   # `open()` should be replaced by `Path.open()`
    "TC002",   # Move third-party import into a type-checking block
    "TRY003",   # Avoid specifying long messages outside the exception class
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "FBT001",   # Boolean-typed positional argument in function definition
    "FBT002",   # Boolean default positional argument in function definition
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004",  # Magic value used in comparison
    "S101",     # Use of `assert` detected
]
"example.py" = [
    "T201",      # `print` found
]

[tool.ruff.lint.mccabe]
max-complexity = 25


[tool.ty.environment]
python-version = "3.13"
